# DJISummerCamp2019

./: .gitmodules  LICENSE  README.md
Algorithm/: Territory.py  pathfinding.py  tag_generator.py
Algorithm/ui/: Keyboard_Arm_Ctrl.py  framework.py
Algorithm/ui/uiPic/: blockshell.psd
Embedded/DummyRobotCode/: scope.jscope
Embedded/DummyRobotCode/Inc/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h
Embedded/DummyRobotCode/MDK-ARM/: HAL_INFANTRY.uvoptx  HAL_INFANTRY.uvprojx  JLinkSettings.ini
Embedded/DummyRobotCode/Src/: a  main.c  usb_device.c  usbd_cdc_if.c
Embedded/DummyRobotCode/Src/AHRS/: AHRS_middleware.h  mpu6500driver_middleware.h
Embedded/DummyRobotCode/Src/Inc/: main.h  usb_device.h
Embedded/DummyRobotCode/Src/MDK-ARM/: JLinkLog.txt  startup_stm32f427xx.lst
Embedded/DummyRobotCode/Src/RoboMaster_Libs/: CANMessage.h  CANUtil.c  MathUtils.c  PositionPID.c  RobotProperties.h
Embedded/DummyRobotCode/Src/app/: CAN_receive.c  CAN_receive.h  INS_task.h  calibrate_task.c  (+9 more)
Embedded/ManifoldCAN/: .gitignore  CMakeLists.txt
Embedded/ManifoldCAN/build_isolated/: catkin_make_isolated.cache
Embedded/ManifoldCAN/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
Embedded/ManifoldCAN/src/: CANMessage.h  CANTopic.h  CANUtil.h  ManifoldCAN.cpp  ManifoldCAN.h  main.cpp
Embedded/RobotCode/: .gitignore
Embedded/RobotCode/MDK-ARM/: HAL_INFANTRY.uvguix.Botbusters  HAL_INFANTRY.uvguix.pin.luo  HAL_INFANTRY.uvoptx  HAL_INFANTRY.uvprojx  startup_stm32f427xx.s
Embedded/RobotCode/Src/: calculate.c  freertos.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c  usbd_cdc_if.c
Embedded/UpperRobotCode/: HAL_INFANTRY.ioc
Embedded/UpperRobotCode/Inc/: main.h  stm32f4xx_it.h
Embedded/UpperRobotCode/MDK-ARM/: HAL_INFANTRY.uvoptx  HAL_INFANTRY.uvprojx  startup_stm32f427xx.s
Embedded/UpperRobotCode/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usbd_conf.c  usbd_desc.c
ROSWs/src/r/: CMakeLists.txt  r.cpp
ROSWs/src/simple_planner/: .local_planner.cpp.swp  local_planner.cpp
ROSWs/src/simple_tf/: package.xml  tf_test.cpp
ROSWs/src/simple_tf/launch/: tf.launch  tf.rviz
ROS_Ws/build_isolated/: catkin_make_isolated.cache
ROS_Ws/src/CANRobot/: CMakeLists.txt
ROS_Ws/src/RefereeComms/: CMakeLists.txt  package.xml
ROS_Ws/src/r/: .r.cpp.swp  package.xml  r.cpp
ROS_Ws/src/sc_localization/: CMakeLists.txt  odom_update_node.cpp
ROS_Ws/src/simple_msgs/: CMakeLists.txt  package.xml
ROS_Ws/src/simple_msgs/msg/: CastleEnergy.msg  GameStatus.msg  RegionOccupy.msg
ROS_Ws/src/simple_planner/: CMakeLists.txt  local_planner.cpp  local_planner.cpp.bak  pid_planner.cpp  utility.h
ROS_Ws/src/simple_tf/: CMakeLists.txt
balls/: talker.py
balls/src/: talker.py
(+253 files in other folders)
